# lila-player

./: AGENTS.md  LICENSE  README.md  lefthook.yml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
.cursor/: rules.mdc
.github/workflows/: deploy-pages.yml  publish.yml
docs/: linux-audio-fix.md
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: audio-waveform.tsx  player-controls.tsx
src/hooks/: use-audio-processor.ts  use-media-session.ts  useAudioProcessor.ts
src/types/: global.d.ts
src/utils/: audio-utils.ts  base-path.ts
